<resources>
    <string name="app_name">CalculatorHw_2_7</string>
    <string name="share">/</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">x</string>
    <string name="ac">AC</string>
    <string name="_plusMinus">+/-</string>
    <string name="percent">%</string>
    <string name="_minus">-</string>
    <string name="_plus">+</string>
    <string name="tochka">.</string>
    <string name="equals">=</string>
    <string name="policies">Policies</string>
    <string name="policy">Policy</string>
    <string name="product_category">Product Category</string>
    <string name="origin_country">Origin Country</string>
    <string name="secondactivity">SecondActivity</string>
    <string name="export_as_csv">Export as CSV</string>
    <string name="new_activity">New Activity</string>
</resources>