<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0"
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_vive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginHorizontal="@dimen/dimen_30"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="@dimen/big_text_80sp" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="@dimen/dimen_16"
            android:paddingVertical="@dimen/dimen_6">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_clear"
                style="@style/Gray.Button"
                android:onClick="onNumberClick"
                android:text="@string/ac" />

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:text="@string/_plusMinus" />

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:layout_marginEnd="@dimen/dimen_16"
                android:text="@string/percent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_share"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/share" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="@dimen/dimen_16"
            android:paddingVertical="@dimen/dimen_6">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_seven"
                style="@style/Gray.Dark.Button"
                android:onClick="onNumberClick"
                android:text="@string/_7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_eight"
                style="@style/Gray.Dark.Button"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:onClick="onNumberClick"
                android:text="@string/_8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_nine"
                style="@style/Gray.Dark.Button"
                android:layout_marginEnd="@dimen/dimen_16"
                android:onClick="onNumberClick"
                android:text="@string/_9" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiply"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/x" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="@dimen/dimen_16"
            android:paddingVertical="@dimen/dimen_6">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_four"
                style="@style/Gray.Dark.Button"
                android:onClick="onNumberClick"
                android:text="@string/_4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_five"
                style="@style/Gray.Dark.Button"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:onClick="onNumberClick"
                android:text="@string/_5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_six"
                style="@style/Gray.Dark.Button"
                android:layout_marginEnd="@dimen/dimen_16"
                android:onClick="onNumberClick"
                android:text="@string/_6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_minus"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/_minus" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="@dimen/dimen_16"
            android:paddingVertical="@dimen/dimen_6">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_one"
                style="@style/Gray.Dark.Button"
                android:onClick="onNumberClick"
                android:text="@string/_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_two"
                style="@style/Gray.Dark.Button"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:onClick="onNumberClick"
                android:text="@string/_2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_three"
                style="@style/Gray.Dark.Button"
                android:layout_marginEnd="@dimen/dimen_16"
                android:onClick="onNumberClick"
                android:text="@string/_3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                tools:ignore="InvalidId"
                android:text="@string/_plus" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="@dimen/dimen_16"
            android:paddingVertical="@dimen/dimen_6">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_zero"
                style="@style/Gray.Dark.Button"
                android:layout_width="@dimen/dimen_176"
                android:onClick="onNumberClick"
                android:paddingStart="@dimen/dimen_30"
                android:paddingEnd="@dimen/dimen_0"
                android:text="@string/_0"
                android:textAlignment="textStart"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:text="@string/tochka" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equals"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/equals" />

        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/bottom"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_18"
        android:textSize="@dimen/little_text_20sp"
        android:textStyle="bold"
        android:text="@string/new_activity"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/purple_200"
        tools:ignore="InvalidId" />

</androidx.constraintlayout.widget.ConstraintLayout>