<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:background="@color/gray_light">

    <TextView
        android:id="@+id/policies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_55"
        android:text="@string/policies"
        android:textColor="@color/black"
        android:textSize="@dimen/average_text_34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bottom1"
        android:layout_width="@dimen/dimen_381"
        android:layout_height="@dimen/dimen_61"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_48"
        android:backgroundTint="@color/white"
        android:text="@string/policy"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/little_text_20sp"
        app:cornerRadius="@dimen/dimen_16"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/policies"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bottom2"
        android:layout_width="@dimen/dimen_381"
        android:layout_height="@dimen/dimen_61"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_8"
        android:backgroundTint="@color/white"
        android:text="@string/product_category"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/little_text_20sp"
        app:cornerRadius="@dimen/dimen_16"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom1"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bottom3"
        android:layout_width="@dimen/dimen_381"
        android:layout_height="@dimen/dimen_61"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_8"
        android:backgroundTint="@color/white"
        android:text="@string/origin_country"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/little_text_20sp"
        app:cornerRadius="@dimen/dimen_16"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom2"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bottom4"
        android:layout_width="@dimen/dimen_381"
        android:layout_height="@dimen/dimen_61"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_8"
        android:backgroundTint="@color/white"
        android:text="@string/product_category"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/little_text_20sp"
        app:cornerRadius="@dimen/dimen_16"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_72"
        android:text="@string/secondactivity"
        android:textSize="@dimen/dimen_44"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage"
        android:layout_marginTop="@dimen/dimen_190"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/export"
        android:layout_width="@dimen/dimen_172"
        android:layout_height="@dimen/dimen_68"
        android:layout_marginStart="@dimen/dimen_116"
        android:layout_marginTop="@dimen/dimen_16"
        android:backgroundTint="@color/red"
        android:text="@string/export_as_csv"
        app:cornerRadius="@dimen/dimen_16"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view1" />


</androidx.constraintlayout.widget.ConstraintLayout>